--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/9a874e941c.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <title>Document</title>
 </head>
 <body>
@@ -14,9 +15,9 @@
     <main>
         <p>contact</p>
         <ul>
-            <li><a href="https://www.linkedin.com/home" target="_blank"><i class="fa-brands fa-linkedin"></i>LinkedIn</a></li>
-            <li><a href="mailto:ma.orange381@gmail.com"><i class="fa-solid fa-envelope"></i>Email</a></li>
-            <li><a href="phone: 012345678"><i class="fa-solid fa-phone"></i>Phone</a></li>
+            <li><a href="https://www.linkedin.com/home" target="_blank"><span class="material-symbols-outlined">sms</span>LinkedIn</a></li>
+            <li><a href="mailto:ma.orange381@gmail.com"><span class="material-symbols-outlined">mail</span>Email</a></li>
+            <li><a href="phone: 012345678"><span class="material-symbols-outlined">call</span>Phone</a></li>
     </main>
 </body>
 </html>
